# mkt-chatbot

./: .env.example  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
aws/: s3.py
chatbot/: chatbot.py
crawler/: settings.py
crawler/spiders/: superside.py
processing/: _base.py  superside.py
tests/: conftest.py
tests/aws/: test_aws.py
tests/processing/: test_base.py  test_superside.py
